# image-alt-text

./: .gitignore  README.md  disable_classic_context_menu.reg  enable_classic_context_menu.reg  generate_alt_text.py  pyproject.toml
image_alt_text/: __init__.py  cli.py  installer.py
